Fixed navbar to collapse on front page and added nav bar to recipes.

--- a/src/main/resources/templates/css/style.css
+++ b/src/main/resources/templates/css/style.css
@@ -18,10 +18,8 @@ h1{
 .navbar-brand
 {
     font-family: sans-serif;
+    font-size: 35px;
     color: white;
+
 }
 
-.nav navbar-nav
-{
-   font-color: green;
-}
